views/css/style.css
main 					{
	padding-top:30px;
}
/*********************************************************************************/
/* Backgrounds                                                                   */
/*********************************************************************************/
	#home-bg{
		background:		url("../img/tree-background.jpg") no-repeat center center fixed;
		-webkit-background-size: 	cover;
		-moz-background-size: 		cover;
		-o-background-size: 		cover;
		background-size:			cover;
	}

	#markethome-bg{
		background:		url("../img/Blue-background.jpg") no-repeat center center fixed;
		-webkit-background-size: 	cover;
		-moz-background-size: 		cover;
		-o-background-size: 		cover;
		background-size:			cover;
	}



/*********************************************************************************/
/* Basic                                                                         */
/*********************************************************************************/
	body{
		
	}

	body,input,select,textarea
	{
		font-family: 'Open Sans', sans-serif;
		font-size: 12pt;
		color: #696969;
		font-weight: 300;
	}

	a{
		color: #0090c5;
		text-decoration: underline;
	}

		a:hover{
			text-decoration: none;
		}

	h1, h2, h3, h4, h5, h6{
		color: #444;
		font-weight: 800;
	}

	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a{
		color: inherit;
		text-decoration: none;
		outline: 0;
	}

	b, strong{
		font-weight: 600;
		color: #444;
	}

	i, em{
		font-style: italic;
	}

	br.clear{
		clear: both;
	}

	sub{
		position: relative;
		top: 0.5em;
		font-size: 0.8em;
	}

	sup{
		position: relative;
		top: -0.5em;
		font-size: 0.8em;
	}

	hr{
		border: 0;
		border-top: solid 1px #eee;
	}

	blockquote{
		border-left: solid 0.5em #eee;
		padding: 1em 0 1em 2em;
		font-style: italic;
	}

	p, ul, ol, dl{
		margin-bottom: 2em;
	}

	/* Section/Article */

		section, article{
			margin-bottom: 0em;
		}

			section > :last-child, article > :last-child{
				margin-bottom: 0;
			}

			section:last-child,
			article:last-child{
				margin-bottom: 0;
			}

		header{
			margin: 0 0 2em 0;
		}

			header h2, header h3{
				margin: 0 0 0.25em 0;
			}

			header p{
				margin: 0;
			}

		footer{
			margin: 0.5em 0 0 0;
		}

/* List
===================== */
ul{
}

	ul.default{
		list-style: disc;
		padding-left: 1em;
	}
		ul.default li{
			padding-left: 0.5em;
		}

	ul.actions{
	}
		ul.actions li{
			display: inline-block;
			padding: 0 0 0 0.25em;
			margin: 0 0 0 0.25em;
		}
			ul.actions li:first-child{
				margin-left: 0;
				padding-left: 0;
			}

	ul.menu li{
		border-left: solid 1px #e0e0e0;
		display: inline-block;
		padding: 0 0 0 0.75em;
		margin: 0 0 0 0.75em;
	}

		ul.menu li:first-child{
			border-left: 0;
			margin-left: 0;
			padding-left: 0;
		}

ol{
}
	ol.default{
		list-style: decimal;
		padding-left: 1.25em;
	}
		ol.default li{
			padding-left: 0.25em;
		}

/* HEADER
===================== */
header .navbar 		{
	border-radius:0;
}

/* Button
===================== */
		input[type="button"],
		input[type="submit"],
		input[type="reset"],
		.button{
			font-size: 1.35em;
			padding: 0.6em 1.5em;
		}

			input[type="button"].big,
			input[type="submit"].big,
			input[type="reset"].big,
			.button.big{
				font-size: 2.25em;
				padding: 0.8em 0.9em;
			}

			.button.icon{
			}

				.button.icon:before{
					margin-right: 0.5em;
					top: 0.05em;
				}


			.button.login{
				position: absolute;
				right: 0.15em;
				top: 50%;
				margin-top: -0.5em;
				width: 80%;
			}

/* Box
===================== */
	.box{
		border-radius: 6px;
		box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.015);
		box-shadow: 0px 3px 0px 0px rgba(0,0,0,0.05);
		font-size: 30px;
	}
		.box.gray{
			background: #f8f8f8;
		}

	.blackbox{
		background: #000;
		border-radius: 6px;
		box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.015);
		box-shadow: 0px 3px 0px 0px rgba(0,0,0,0.05);
	}

	.whitebox{
		background: #fff;
		border-radius: 6px;
		box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.015);
		box-shadow: 0px 3px 0px 0px rgba(0,0,0,0.05);
	}

	.loginbox{
		background-color: rgba(200,200,200,.7);
		border-radius: 6px;
		box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.015);
		box-shadow: 0px 3px 0px 0px rgba(0,0,0,0.05);
	}
		.loginbox.buttons{
			padding: 0 0 0 0;
			margin:  0 0 0 0;
			width: 100%;
		}

	.buttonbox{
		border-radius: 6px;
		box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.015);
		box-shadow: 0px 3px 0px 0px rgba(0,0,0,0.05);
		padding: 10px,10px,10px,10px;
	}


/* markethome
===================== */
#history{
	height: 130%;
	width: 90%;
}

#gangstaMap{
	width: 100%;
}

#gangstaCat{
	width: 100%;
	padding-bottom: 3%;
}

.glyphicon.glyphicon-chevron-right{
	font-size: 30px;
}

.glyphicon.glyphicon-chevron-left{
	font-size: 30px;
}

#left{

	margin-top: -.5%;
	padding: 5% 5% -5% 4%;

}

#right{

	margin-top: -5.25%;
	margin-left: .25%;
	padding: 5% 5% 2% 5%;

}


#calendar{
	padding: 5px 5px 5px 5px;

}
#marketMain #userProfile{
	width: 24%;
	float: left;
	margin-right: 1%;
}

#marketMain #market{
	width: 50%;
	float: left;
	margin-right: 1%;
}

#marketMain #bookingHistory{
	width: 24%;
	float: left;

}

#userProfile{
	height: 100%;
}

#market{
	height: 100%;
}

#bookingHistory{
	height: 100%;
}

#dateandmap{
	height: 100%;
}


/* NGANIMATE
====================== */

/* show and hide */
.show-hide-message.ng-hide-remove {
	-webkit-animation:zoomIn 0.3s both ease;
	-moz-animation:zoomIn 0.3s both ease;
	animation:zoomIn 0.3s both ease;
}

/* ANIMATIONS
====================== */
.spinner {
	-webkit-animation:spin 1s infinite;
	-moz-animation:spin 1s infinite;
	animation:spin 1s infinite;
}

@keyframes spin {
	from 	{ transform:rotate(0deg); }
	to 	{ transform:rotate(360deg); }
}

@-webkit-keyframes spin {
	from 	{ -webkit-transform:rotate(0deg); }
	to 	{ -webkit-transform:rotate(360deg); }
}

@-moz-keyframes spin {
	from 	{ -moz-transform:rotate(0deg); }
	to 	{ -moz-transform:rotate(360deg); }
}


/*********************************************************************************/
/* Banner                                                                        */
/*********************************************************************************/
	#banner{
		padding: 1em;
	}
		#banner h2{
			font-size: 3.5em;
			margin: 0.1em 0 0.35em 0;
		}
		#banner p{
			font-size: 2.75em;
			line-height: 1.35em;
			margin: 0;
		}
		#banner ul{
			margin: 0 0 0 2em;
		}

